# cmake-modules

./: AdocMan.cmake  FindOpenSSLFeatures.cmake  LICENSE.md  PandocMan.cmake  README.md
.github/workflows/: centos8.yml
ci/adocman/: CMakeLists.txt  testadoc.1.adoc
ci/findbotan/: CMakeLists.txt
ci/findossl/: CMakeLists.txt
ci/pandocman/: CMakeLists.txt  testpandoc.1.md
